added JuniorAccountantOptions and DesiredLadder screens

--- a/app.json
+++ b/app.json
@@ -25,6 +25,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "cea8e56f-d739-48c3-8787-c1401fd9e177"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/cea8e56f-d739-48c3-8787-c1401fd9e177"
     }
   }
 }
